[java] Add support for java 9+ (removes support for java 7). Fixes #708,#771